workloads/music-stack/kustomize/base/navidrome/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: navidrome-https

spec:
  parentRefs:
    - name: primary-gateway
      namespace: envoy-gateway-system
      sectionName: https

  hostnames:
    - navidrome.invalid.example

  rules:
    - backendRefs:
        - name: navidrome-svc # SVC name (internal IP:PORT).
          port: 80
      timeouts:
          request: 60s
          backendRequest: 60s
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: navidrome-http

spec:
  parentRefs:
    - name: primary-gateway
      namespace: envoy-gateway-system
      sectionName: http

  hostnames:
    - navidrome.invalid.example

  rules:
    - backendRefs:
        - name: navidrome-svc # SVC name (internal IP:PORT).
          port: 80
      timeouts:
          request: 60s
          backendRequest: 60s
      matches:
        - path:
            type: PathPrefix
            value: /
